# Membrane-Simulation-C

./: Makefile.am  Makefile.in  README.txt  configure.ac
src/: Makefile.am  Makefile.in  input.C  parameters.inp  parameters2.inp  parameters3.inp  parameters4.inp  util.C  vesicle_sim.C
